--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
@@ -21,7 +22,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "express": "^4.18.3",
+    "express-fileupload": "^1.4.3",
     "lodash": "^4.17.21",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "xlsx": "^0.18.5"
   }
 }
